--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: guestbook-ui2
 spec:
   replicas: 1
   revisionHistoryLimit: 3
@@ -18,4 +18,3 @@ spec:
         name: guestbook-ui
         ports:
         - containerPort: 80
-
