--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -6,7 +6,7 @@ spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
-    matchLabelsg:
+    matchLabels:
       app: guestbook-ui
   template:
     metadata:
@@ -17,4 +17,4 @@ spec:
       - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
         name: guestbook-ui
         ports:
-        - containerPort: 80
+        - containerPort: 89
