--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -1,10 +1,10 @@
-apiVersion: apps/v1
+#apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: guestbook-ui
 spec:
   replicas: 2
-  revvisionHistoryLimit: 3
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: guestbook-ui
